--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,10 +1,56 @@
-<form [formGroup]="form">
-  <input formControlName='artist' type='text' placeholder='Artist'/>
-  <input formControlName='city' type='text' placeholder='City'/>
-  <input formControlName='date' type='date' placeholder='Date'/>
-  <select formControlName='category'>
-    <option value="" disabled selected hidden>Category</option>
-    <option *ngFor='let category of categories' [value]="category">{{category}}</option>
-  </select>
-  <button type='submit' (click)="search()">Search</button>
-</form>
+<div class="filter-box">
+  <form [formGroup]="form">
+    <input
+      formControlName="artist"
+      type="text"
+      placeholder="Buscar artista..."
+    />
+    <div class="input">
+      <input
+        formControlName="city"
+        type="text"
+        placeholder="Ciudad"
+      />
+      <img [src]="ICON_LOCATION" />
+    </div>
+    <div class="input">
+      <input
+        formControlName="date"
+        [type]="typeCalendar"
+        placeholder="Fecha"
+        (change)="typeCalendar = 'text'"
+        (focus)="typeCalendar = 'date'"
+        (blur)="typeCalendar = 'text'"
+      />
+      <img
+        [src]="ICON_CALENDAR"
+        *ngIf="typeCalendar === 'text'"
+      />
+    </div>
+    <div class="select">
+      <select formControlName="category">
+        <option
+          value=""
+          disabled
+          selected
+          hidden
+        >
+          Categoria
+        </option>
+        <option
+          *ngFor="let category of categories"
+          [value]="category"
+        >
+          {{ category }}
+        </option>
+      </select>
+      <img [src]="ICON_ARROW_DOWN" />
+    </div>
+    <button
+      type="submit"
+      (click)="search()"
+    >
+      Buscar
+    </button>
+  </form>
+</div>
