--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,10 +1,12 @@
 <div class="filter-box">
   <form [formGroup]="form">
-    <input
-      formControlName="artist"
-      type="text"
-      placeholder="Buscar artista..."
-    />
+    <div class="input">
+      <input
+        formControlName="artist"
+        type="text"
+        placeholder="Buscar artista..."
+      />
+    </div>
     <div class="input">
       <input
         formControlName="city"
