--- a/src/assets/scss/mixins/_buttons.scss
+++ b/src/assets/scss/mixins/_buttons.scss
@@ -1,7 +1,8 @@
-@mixin button {
-  background-color: $red500;
+@mixin button($color, $size) {
+  background-color: $color;
   border: none;
   color: white;
-  font-size: 18px;
+  font-size: $size;
+  padding: 5px 10px;
   text-transform: uppercase;
 }
