feat: Implement loading to request

--- a/src/app/components/event-card/event-card.component.scss
+++ b/src/app/components/event-card/event-card.component.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/scss/variables/colors";
 @import "../../../assets/scss/mixins/buttons";
 
-.article {
+.event {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   &_img {
     height: 100%;
