--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
 
 <div class='my-4 mx-3'>
   <div class='row w-100 g-4 ms-0'>
-    <div class='col-12 col-sm-6 col-md-4 col-lg-3' *ngFor='let article of articles'>
-      <app-article-card [article]='article'></app-article-card>
+    <div class='col-12 col-sm-6 col-md-4 col-lg-3' *ngFor='let event of events'>
+      <app-event-card [event]='event'></app-event-card>
+    </div>
+    <div *ngIf='events.length === 0'>
+      <p>No hay eventos...</p>
     </div>
   </div>
 </div>
